just discovered readonly option. woops

--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -542,7 +542,7 @@
 <script type="text/javascript">
 jQuery(function ($) {
     // Customise the default plugin options with the third argument.
-    $('body').annotator()
+    $('body').annotator({readOnly: true})
               .annotator('setupPlugins', {tokenUrl: 'http://localhost:5000/api/token'},
               {Tags: false, Filter: false, Permissions: false
                }
@@ -553,8 +553,8 @@ jQuery(function ($) {
 <!-- below is the proper version of the annotator script (with Ian's addition).
     It doesn't have persistent storage for some reason though.
  -->
-<!--
-  <script type="text/javascript">
+
+  <!-- <script type="text/javascript">
 	jQuery(function ($) {
 		var annotator = $('body').annotator().data('annotator'),
 			anonymousToken = {
@@ -603,8 +603,8 @@ jQuery(function ($) {
 			},
 		});
 	});
-  </script>
- -->
+  </script> -->
+
 
 
 <!-- share buttons-->
