--- a/app/static/css/audiodoc_page.css
+++ b/app/static/css/audiodoc_page.css
@@ -125,3 +125,15 @@ header .container {
 }
 /* end of image credits stuff */
 /**/
+
+/* image within transcript */
+
+.image_transcript{
+  float: left;
+  margin: 2em 4em 2em 0;
+  background-color:white;
+  padding-top: 2em;
+  padding-right:2em;
+  padding-left:2em;
+  padding-bottom:1.5em;
+}
