--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -542,25 +542,64 @@
 <script type="text/javascript">
 jQuery(function ($) {
     // Customise the default plugin options with the third argument.
-    $('body').annotator({readOnly: true})
-              .annotator('setupPlugins', {tokenUrl: 'http://localhost:5000/api/token'},
-              {Tags: false, Filter: false, Permissions: false
+    $('body').annotator({readOnly: false})
+              .annotator('setupPlugins', {tokenUrl: 'http://localhost:5000/api/token'},{
+                Tags: false,
+                Filter: false,
+                AnnotateItPermissions: true
                }
                );
                });
 </script>
 
+
+
+<!-- <script type="text/javascript">
+  jQuery(function ($) {
+    var annotator = $('body').annotator().data('annotator');
+
+    // Store plugin
+    annotator.addPlugin('Store',{
+      prefix: 'http://annotateit.org/api',
+      annotationData: {
+        'uri': 'http://localhost:5000/audiodoc/stegosaurus'
+      },
+      loadFromSearch: {
+        'limit': 20,
+        'uri': 'http://localhost:5000/audiodoc/stegosaurus'
+      }
+    });
+
+    // Auth plugin
+    annotator.addPlugin('Auth',{
+      tokenUrl: 'http://localhost:5000/api/token'
+    });
+    //register callback to run when we get a token
+		annotator.plugins.Auth.withToken(function(token){
+			//just pass the token to the permissions plugin
+			annotator.plugins.Permissions.setUser(token);
+		});
+
+    // Permissions plugin
+    annotator.addPlugin('Permissions',{
+
+    })
+  })
+</script> -->
+
+
+
 <!-- below is the proper version of the annotator script (with Ian's addition).
     It doesn't have persistent storage for some reason though.
  -->
-
   <!-- <script type="text/javascript">
 	jQuery(function ($) {
 		var annotator = $('body').annotator().data('annotator'),
 			anonymousToken = {
 				userId: '0',
 				displayName: 'anonymous'
-			};
+			}
+      ;
 
 		//add auth plugin (docs: http://docs.annotatorjs.org/en/v1.2.x/plugins/auth.html)
 		annotator.addPlugin('Auth', {
@@ -573,6 +612,18 @@ jQuery(function ($) {
 			//just pass the token to the permissions plugin
 			annotator.plugins.Permissions.setUser(token);
 		});
+
+    // Store plugin
+    annotator.addPlugin('Store',{
+      prefix: 'http://annotateit.org/api',
+      annotationData: {
+        'uri': 'http://localhost:5000/audiodoc/stegosaurus'
+      },
+      loadFromSearch: {
+        'limit': 20,
+        'uri': 'http://localhost:5000/audiodoc/stegosaurus'
+      }
+    });
 
 		//add permissions plugin (docs: http://docs.annotatorjs.org/en/v1.2.x/plugins/permissions.html)
 		//note that we're using a modified version of annotator which introduces a 'create' permission
