--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -358,7 +358,7 @@
 
           <div class="author-bio">
             <div class="col-md-3">
-              <img class="clip-circle"class="img-responsive" src="{{audiodocs[0].author_image}}"  alt = "author image">
+              <img class="author-image"class="img-responsive" src="{{audiodocs[0].author_image}}"  alt = "author image">
             </div>
             <div class="col-md-3">
               <div class="author-name">
