changed annotations for presentation again

--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -546,7 +546,7 @@ jQuery(function ($) {
               .annotator('setupPlugins', {tokenUrl: 'http://localhost:5000/api/token'},{
                 Tags: false,
                 Filter: false,
-                Permissions:true
+                Permissions:false
                }
                );
                });
