--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -359,7 +359,7 @@
             </div>
             <div class="col-md-3">
               <div class="author-name">
-              <h2 style="text-align:right;"> {{ audiodoc[0].author_name }} </h2>
+              <h2 style="text-align:right;"> {{ audiodoc[0].author_name }}</h2>
               </div>
             </div>
             <div class="col-md-6">
@@ -542,7 +542,7 @@
 <script type="text/javascript">
 jQuery(function ($) {
     // Customise the default plugin options with the third argument.
-    $('body').annotator()
+    $('body').annotator({readOnly: {{read_only}}})
               .annotator('setupPlugins', {tokenUrl: 'http://localhost:5000/api/token'},{
                 Tags: false,
                 Filter: false,
