--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -306,7 +306,7 @@
     </div>
   </nav>
 
-  <header class="audiodoc_header" style="background: url('{{ audiodocs[0].topic_image }}'); background-repeat: no-repeat; background-size:cover;">
+  <header class="audiodoc_header" style="background: url('{{ audiodocs[0].topic_image }}') fixed; background-repeat: no-repeat; background-size:cover;">
     <div class="container">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 text-center">
