--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -36,7 +36,7 @@
   <!-- Custom Fonts -->
   <link href="/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
-  <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Lato:100,300,300italic,400" rel="stylesheet" type="text/css">
 
 
 </head>
