--- a/app/static/css/knowitwallredux.css
+++ b/app/static/css/knowitwallredux.css
@@ -464,7 +464,7 @@ text-align: left;
   margin-bottom: 30px;
   display: inline-block;
   line-height: 110%;
-  padding: 0.3em;
+  padding: 0.3em 0.4em;
 }
 
 
