--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -362,7 +362,7 @@
             </div>
             <div class="col-md-3">
               <div class="author-name">
-              <h2 style="text-align:right;"> {{ audiodocs[0].author_name | safe}} </h2>
+              <h2 style="text-align:right; font-size: {{ audiodocs[0].name_font_size }};"> {{ audiodocs[0].author_name | safe}} </h2>
               </div>
             </div>
             <div class="col-md-6">
