annotator pointing to backend store

--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -542,7 +542,7 @@
   <script src="/static/js/showdown.min.js"></script>
 
   <!-- annotator.js -->
-  <script src="/static/js/annotator-full-1.2.7-modified.min.js"></script>
+  <script src="/static/js/annotator-full-1.2.7-modified.js"></script>
 
 </script>
 
