topic description on home page is now smaller (better for desktop and mobile)

--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -33,7 +33,7 @@
   <!-- Custom Fonts -->
   <link href="/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
-  <link href="http://fonts.googleapis.com/css?family=Lato:100,300,300italic,400" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Lato:100,300,300italic,400,400italic," rel="stylesheet" type="text/css">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -391,7 +391,7 @@
               {{audiodoc.topic_name | safe}}
             </a>
 
-            <p style="font-size:1.6em;">{{audiodoc.topic_description | safe}}</p>
+            <p class="episode-description">{{audiodoc.topic_description | safe}}</p>
 
           </div>
 
