--- a/app/static/css/knowitwallredux.css
+++ b/app/static/css/knowitwallredux.css
@@ -465,8 +465,16 @@ text-align: left;
     padding: 0em;
   }
 }
-
-
+.episode-description{
+  margin-bottom: 1.4em;
+  line-height: 1.5em;
+  color: #1E1F23;
+}
+@media(max-width:561px){
+  .episode-description{
+    margin-bottom: 0em;
+  }
+}
 .contact-title {
 
   font-size: 1.5em;
