--- a/app/static/css/knowitwallredux.css
+++ b/app/static/css/knowitwallredux.css
@@ -515,7 +515,7 @@ text-align: left;
   line-height: 1.5em;
   color: #1E1F23;
   font-size: 1em;
-  padding: 1em;
+  padding: 1em 2em;
    min-height: 220px;
 }
 @media(max-width:561px){
