--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -8,13 +8,13 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="{{audiodoc[0].og_description}}">
+  <meta name="description" content="{{audiodocs[0].og_description}}">
   <meta name="keywords" content="Knowitwall, Know It Wall, audio-documentary, audiodoc, outreach, academia, insightful, science, humanities">
   <meta name="author" content="">
-  <meta property="og:image" content="http://knowitwall.com/{{ audiodoc[0].topic_image }}" />
-  <meta property="og:title" content="{{audiodoc[0].og_name}}" />
-  <meta property="og:description" content="{{audiodoc[0].og_description}}" />
-  <meta property="og:url" content="http://knowitwall.com/audiodoc/{{audiodoc[0].url}}" />
+  <meta property="og:image" content="http://knowitwall.com/{{ audiodocs[0].topic_image }}" />
+  <meta property="og:title" content="{{audiodocs[0].og_name}}" />
+  <meta property="og:description" content="{{audiodocs[0].og_description}}" />
+  <meta property="og:url" content="http://knowitwall.com/audiodoc/{{audiodocs[0].url}}" />
   <meta property=”og:type” content=”website” />
   <link rel="icon" href="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
@@ -314,12 +314,12 @@
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 text-center">
           <div class="episode-title">
-            {{audiodoc[0].topic_name | safe}}
+            {{audiodocs[0].topic_name | safe}}
           </div>
         </div>
 
         <div class="col-lg-10 col-lg-offset-1 text-center page-scroll" style="color: black; font-size:125%">
-           <i style="color: {{audiodoc[0].by_in_colour}}">by</i> <a href="#author" class="highlight">{{audiodoc[0].author_name | safe}}</a> <i style="color: {{audiodoc[0].by_in_colour}}">in</i> <span class="highlight">{{audiodoc[0].discipline}} </span>
+           <i style="color: {{audiodocs[0].by_in_colour}}">by</i> <a href="#author" class="highlight">{{audiodocs[0].author_name | safe}}</a> <i style="color: {{audiodocs[0].by_in_colour}}">in</i> <span class="highlight">{{audiodocs[0].discipline}} </span>
 
       </div>
     </div>
@@ -337,22 +337,22 @@
     <div class="container image_credits">
       <div class="row ">
         <p>
-          {{audiodoc[0].image_credits | safe}}
+          {{audiodocs[0].image_credits | safe}}
         </p>
       </div>
     </div>
     <div class="container previous-audiodoc">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 text-center">
-          <p style="font-size:1.6em;">{{audiodoc[0].topic_description | safe}}</p>
-          <p style="font-style:italic;">narrated by {{ audiodoc[0].narration_credits }}</p>
-          <p style="font-style:italic;">music by {{ audiodoc[0].music_credits }}</p>
+          <p style="font-size:1.6em;">{{audiodocs[0].topic_description | safe}}</p>
+          <p style="font-style:italic;">narrated by {{ audiodocs[0].narration_credits }}</p>
+          <p style="font-style:italic;">music by {{ audiodocs[0].music_credits }}</p>
         </div>
 
         <div class="col-lg-12">
 
           <audio controls id="author">
-            <source src="{{audiodoc[0].audio_mp3}}" type="audio/mpeg">
+            <source src="{{audiodocs[0].audio_mp3}}" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
 
@@ -361,7 +361,7 @@
 
           <div class="author-bio">
             <div class="col-md-3">
-              <img class="author-image"class="img-responsive" src="{{audiodoc[0].author_image}}"  alt = "author image">
+              <img class="author-image"class="img-responsive" src="{{audiodocs[0].author_image}}"  alt = "author image">
             </div>
             <div class="col-md-3">
               <div class="author-name">
@@ -370,7 +370,7 @@
             </div>
             <div class="col-md-6">
               <div class="vertical-line">
-              <p > {{ audiodoc[0].author_bio | safe}} </p>
+              <p > {{ audiodocs[0].author_bio | safe}} </p>
               </div>
             </div>
           </div>
@@ -378,7 +378,7 @@
 
         <div class="col-md-12" id="read">
           <div class="transcript" id="annotator_transcript"> <!-- transcript class gives the padding. annotator_transcript allows annotator to work -->
-            {{ audiodoc[0].transcript | safe }}
+            {{ audiodocs[0].transcript | safe }}
             <!-- Go to www.addthis.com/dashboard to customize your tools -->
             <div class="addthis_sharing_toolbox" style="float: right;"></div>
           </div>
@@ -390,9 +390,9 @@
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'knowitwall'; // Required - Replace '<example>' with your forum shortname
-            var disqus_identifier = '{{audiodoc[0].unique_id}}';
-            var disqus_url = 'http://knowitwall.com/{{audiodoc[0].unique_id}}';
-            var disqus_title = '{{audiodoc[0].unique_id}}';
+            var disqus_identifier = '{{audiodocs[0].unique_id}}';
+            var disqus_url = 'http://knowitwall.com/{{audiodocs[0].unique_id}}';
+            var disqus_title = '{{audiodocs[0].unique_id}}';
             /* * * DON'T EDIT BELOW THIS LINE * * */
             (function() {
                 var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
@@ -450,7 +450,7 @@
             </div>
 
 
-            <input type="hidden" name="ad_name" value="{{audiodoc[0].topic_name}}">
+            <input type="hidden" name="ad_name" value="{{audiodocs[0].topic_name}}">
 
             <br>
             <div id="success"></div>
