Terms of use page has proper padding-top

--- a/app/templates/terms.html
+++ b/app/templates/terms.html
@@ -268,7 +268,7 @@
     <!-- /.container-fluid -->
     </div>
   </nav>
-  <section>
+  <section style="padding-top:120px;">
  <div class="container">
 
 
