annotatations now pop up on the right hand side of screen: annotator.js now addds a style 'left:90%'

--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -35,7 +35,7 @@
 
 
   <!-- annotator -->
-  <link href="/static/css/annotator.min.css" rel="stylesheet" type="text/css">
+  <link href="/static/css/annotator-KIW.css" rel="stylesheet" type="text/css">
 
   <!-- Custom Fonts -->
   <link href="/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
