--- a/app/static/css/annotator-KIW.css
+++ b/app/static/css/annotator-KIW.css
@@ -62,7 +62,7 @@
 .annotator-notice {
     position: absolute;
     font-size: 10px;
-    line-height: 1
+    line-height: 1;
 }
 
 .annotator-hide {
@@ -137,7 +137,7 @@
 .annotator-widget .annotator-item {
     padding: 0;
     margin: 0;
-    list-style: none
+    list-style: none;
 }
 
 .annotator-widget::after {
