--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -539,7 +539,7 @@
   <script src="/static/js/audioplayer.js"></script>
 
   <!-- showdown library -->
-  <script src="/static/js/showdown.min.js"></script>
+  <!-- <script src="/static/js/showdown.min.js"></script> -->
 
   <!-- annotator.js -->
   <script src="/static/js/annotator-full-1.2.7-modified.js"></script>
@@ -631,36 +631,36 @@ jQuery(function ($) {
 			annotator.plugins.Permissions.setUser(token);
 		});
 
-		//add permissions plugin (docs: http://docs.annotatorjs.org/en/v1.2.x/plugins/permissions.html)
-		//note that we're using a modified version of annotator which introduces a 'create' permission
-	// 	annotator.addPlugin('Permissions', {
-	// 		//initialise with the anonymous token
-	// 		user: anonymousToken,
-	// 		userId: function (user) {
-	// 			return (user || anonymousToken).userId;
-	// 		},
-	// 		userString: function (user) {
-	// 			return (user || anonymousToken).displayName;
-	// 		},
-	// 		userAuthorize: function(action, annotation, user) {
-	// 			user = user || anonymousToken;
-  //
-	// 			//user not logged in (ie: 'anonymous user'):
-	// 			if(user.userId === "0"){
-	// 				//can view annotations, cannot create/edit annotations
-	// 				return action === 'read';
-	// 			}
-	// 			//admin logged in: can edit/create/delete all annotations
-	// 			if(user.isAdmin){
-	// 				return true;
-	// 			}
-  //
-	// 			//user logged in: can create annotations (and read them)
-	// 			return action === 'create' || action === 'read';
-	// 		},
-	// 	});
-	// });
-  // </script> -->
+	// 	add permissions plugin (docs: http://docs.annotatorjs.org/en/v1.2.x/plugins/permissions.html)
+	// 	note that we're using a modified version of annotator which introduces a 'create' permission
+		annotator.addPlugin('Permissions', {
+			//initialise with the anonymous token
+			user: anonymousToken,
+			userId: function (user) {
+				return (user || anonymousToken).userId;
+			},
+			userString: function (user) {
+				return (user || anonymousToken).displayName;
+			},
+			userAuthorize: function(action, annotation, user) {
+				user = user || anonymousToken;
+
+				//user not logged in (ie: 'anonymous user'):
+				if(user.userId === "0"){
+					//can view annotations, cannot create/edit annotations
+					return action === 'read';
+				}
+				//admin logged in: can edit/create/delete all annotations
+				if(user.isAdmin){
+					return true;
+				}
+
+				//user logged in: can create annotations (and read them)
+				return action === 'create' || action === 'read';
+			},
+		});
+	});
+  </script> -->
 
 
 
