modified the about section

--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -367,9 +367,9 @@
         </div>
         <div class="col-md-6">
           <div class="vertical-line">
-          <p class = 'justify'>Know it Wall is an education website in arts & sciences. We make short documentaries, written by experts in their fields, for the enjoyment of everyone.</p>
+          <p class = 'justify'>Know it Wall is place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.</p>
           <br>
-          <p class = 'justify'>Right now you can listen to new ones every two weeks, but soon you'll be able to watch them too. From space to spider monkeys, pyramids to Pythagoras, there’s no limit to what you could be learning!</p>
+          <p class = 'justify'>Right now you can read and listen to our documentaries, but soon you'll be able to watch them too. From stegosaurus to Shakespeare, protons to pandemics, there’s no limit to what you could encounter!</p>
           </div>
         </div>
       </div>
