added link to medium and soundcloud in the footer

--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -369,7 +369,7 @@
           <div class="vertical-line">
           <p class = 'justify'>Know it Wall is place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.</p>
           <br>
-          <p class = 'justify'>Right now you can read and listen to our documentaries, but soon you'll be able to watch them too. From stegosaurus to Shakespeare, protons to pandemics, there’s no limit to what you could encounter!</p>
+          <p class = 'justify'>Right now you can read and listen to our documentaries, but soon you'll be able to watch them too. From <i>Stegosaurus</i> to Shakespeare, protons to pandemics, there’s no limit to what you could encounter!</p>
           </div>
         </div>
       </div>
@@ -575,12 +575,12 @@
           <div class="col-md-4 col-md-offset-4 ">
             <h3>We're social too</h3>
             <ul class="list-inline">
-              <!--
               <li>
-                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                <a href="https://soundcloud.com/knowitwall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-soundcloud"></i></a>
               </li>
-
--->
+              <li>
+                <a href="https://medium.com/@KnowitWall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-medium"></i></a>
+              </li>
               <li>
                 <a href="https://twitter.com/KnowitWall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
               </li>
