--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -466,6 +466,7 @@
 
   <!-- Footer -->
   <footer class="text-center">
+
     <div class="footer-above">
       <div class="container">
         <div class="row">
@@ -473,13 +474,14 @@
           <div class="col-md-4 col-md-offset-4 ">
             <h3>We're social too</h3>
             <ul class="list-inline">
-              <!--
               <li>
-                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                <a href="https://soundcloud.com/knowitwall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-soundcloud"></i></a>
               </li>
-            -->
               <li>
-                <a href="https://twitter.com/KnowitWall" target="_blank"  class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                <a href="https://medium.com/@KnowitWall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-medium"></i></a>
+              </li>
+              <li>
+                <a href="https://twitter.com/KnowitWall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
               </li>
             </ul>
           </div>
