Medium link in footer redirects the magazine in knowitwalls account

--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -579,7 +579,7 @@
                 <a href="https://soundcloud.com/knowitwall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-soundcloud"></i></a>
               </li>
               <li>
-                <a href="https://medium.com/@KnowitWall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-medium"></i></a>
+                <a href="https://medium.com/know-it-wall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-medium"></i></a>
               </li>
               <li>
                 <a href="https://twitter.com/KnowitWall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
