--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -367,7 +367,7 @@
         </div>
         <div class="col-md-6">
           <div class="vertical-line">
-          <p class = 'justify'>Know it Wall is place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.</p>
+          <p class = 'justify'>Know it Wall is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.</p>
           <br>
           <p class = 'justify'>Right now you can read and listen to our documentaries, but soon you'll be able to watch them too. From <i>Stegosaurus</i> to Shakespeare, protons to pandemics, there’s no limit to what you could encounter!</p>
           </div>
