--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
+{% extends "base.html" %}
+{% block content %}
 <head>
 
 
@@ -463,48 +462,9 @@
 
   </section>
 
-
-  <!-- Footer -->
-  <footer class="text-center">
-
-    <div class="footer-above">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-md-4 col-md-offset-4 ">
-            <h3>We're social too</h3>
-            <ul class="list-inline">
-              <li>
-                <a href="https://soundcloud.com/knowitwall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-soundcloud"></i></a>
-              </li>
-              <li>
-                <a href="https://medium.com/know-it-wall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-medium"></i></a>
-              </li>
-              <li>
-                <a href="https://twitter.com/KnowitWall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-              </li>
-            </ul>
-          </div>
-
-        </div>
-      </div>
-    </div>
-    <div class="footer-below">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4">
-            Copyright &copy; Know it Wall 2015
-          </div>
-          <div class="col-lg-4">
-            team@knowitwall.com
-          </div>
-          <div class="col-lg-4">
-            <a href="{{url_for('terms')}}">Terms of Use</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
+{% endblock %}
+<!-- the footer is in base.html -->
+{% block jsscripts %}
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
   <div class="scroll-top page-scroll visible-xs visble-sm">
@@ -557,4 +517,4 @@
     });
   </script>
 </body>
-</html>
+{% endblock %}
