audiodoc.html: added some padding to the bottom of the episode block (before the feedback form)

--- a/app/static/css/audiodoc_page.css
+++ b/app/static/css/audiodoc_page.css
@@ -111,12 +111,12 @@ header .container {
     padding-bottom: 0px;
 }
 
-/**/
 /* image credits stuff */
 /* take of padding of section id=episodes (for image credits) */
 
 #episodes{
   padding: 0;
+  padding-bottom: 50px;
 }
 /* for the image credits */
 
