added the itunes logo (its actually just a music symbol that looks like it)

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,6 +21,9 @@
             <li>
               <a href="https://twitter.com/KnowitWall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
             </li>
+            <li>
+              <a href="https://itunes.apple.com/gb/podcast/know-it-wall/id1078105018" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-music"></i></a>
+            </li>
           </ul>
         </div>
 
