trying to get the circular player in the saharan dust transcript..

--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -29,8 +29,11 @@
   <!-- Custom CSS -->
   <link href="/static/css/knowitwallredux.css" rel="stylesheet">
 
-<!-- audioddoc css  -->
+  <!-- audioddoc css  -->
   <link href="/static/css/audiodoc_page.css" rel="stylesheet">
+
+  <!-- circular player -->
+  <link href="/static/css/circular_player.css" rel="stylesheet">
 
   <!-- Custom Fonts -->
   <link href="/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -496,6 +499,9 @@
   <script src="/static/js/knowitwall.js"></script>
 
   <script src="/static/js/audioplayer.js"></script>
+
+  <!-- circular player -->
+    <script src="/static/js/circular_player.js"></script>
 
   <!-- Sharethis.com: to make the social media buttons work -->
   <!--
