--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,9 @@
           <h3>We're social too</h3>
           <ul class="list-inline">
             <li>
+              <a href="https://itunes.apple.com/gb/podcast/know-it-wall/id1078105018" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-apple"></i></a>
+            </li>
+            <li>
               <a href="https://soundcloud.com/knowitwall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-soundcloud"></i></a>
             </li>
             <li>
@@ -20,9 +23,6 @@
             </li>
             <li>
               <a href="https://twitter.com/KnowitWall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-            </li>
-            <li>
-              <a href="https://itunes.apple.com/gb/podcast/know-it-wall/id1078105018" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-music"></i></a>
             </li>
           </ul>
         </div>
