--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -32,8 +32,6 @@
   <!-- audioddoc css  -->
   <link href="/static/css/audiodoc_page.css" rel="stylesheet">
 
-  <!-- circular player -->
-  <link href="/static/css/circular_player.css" rel="stylesheet">
 
   <!-- Custom Fonts -->
   <link href="/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -342,7 +340,7 @@
     </div>
     <div class="container previous-audiodoc">
       <div class="row">
-        <div class="col-lg-10 col-lg-offset-1 text-center">
+        <div class="col-lg-10 col-lg-offset-1 text-center" style="padding-bottom: 20px;">
           <p style="font-size:1.6em;">{{audiodocs[0].topic_description | safe}}</p>
           <p style="font-style:italic;">narrated by {{ audiodocs[0].narration_credits }}</p>
           <p style="font-style:italic;">music by {{ audiodocs[0].music_credits }}</p>
@@ -350,15 +348,34 @@
 
         <div class="col-lg-12">
 
-          <audio controls id="author">
+          <!-- <audio controls id="author">
             <source src="{{audiodocs[0].audio_mp3}}" type="audio/mpeg">
             Your browser does not support the audio element.
-          </audio>
+          </audio> -->
 
 
         <!-- Author -->
 
           <div class="author-bio">
+
+            <!-- circular player around author image -->
+            <!-- <canvas id="progress" width="320" height="320"></canvas>
+            <div id="player">
+              <audio id="audio" controls>
+                <source src="saharan_dust.mp3" type="audio/mpeg" codecs="mp3"></source>
+              </audio>
+              <img src="{{audiodocs[0].author_image}}">
+              <div class="cover">
+                <div class="controls">
+                  <button id="backward" title="Backward" onclick="resetPlayer()"><i class="fa fa-backward fa-2x"></i></button>
+                  <button id="play-pause" title="Play" onclick="togglePlayPause()"><i class="fa fa-play fa-3x"></i></button>
+                  <button id="forward" title="Forward" onclick="setLocation()"><i class="fa fa-forward fa-2x"></i></button>
+                  <input id="volume" name="volume" min="0" max="1" step="0.1" type="range" onchange="setVolume()" />
+                </div>
+              </div>
+            </div> -->
+
+
             <div class="col-md-3">
               <img class="author-image"class="img-responsive" src="{{audiodocs[0].author_image}}"  alt = "author image">
             </div>
@@ -500,8 +517,6 @@
 
   <script src="/static/js/audioplayer.js"></script>
 
-  <!-- circular player -->
-    <script src="/static/js/circular_player.js"></script>
 
   <!-- Sharethis.com: to make the social media buttons work -->
   <!--
